testsuite/bsc.evaluator/uninit/UninitBitErr5.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling UninitBitErr5.bsv
Warning: "UninitBitErr5.bsv", line 4, column 4: (P0042)
  Assignment to `x' missing from some paths
code generation for sysUninitBitErr5 starts
Error: "UninitBitErr5.bsv", line 3, column 12: (G0028)
  `x' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "UninitBitErr5.bsv", line
  7, column 9.
  During elaboration of `sysUninitBitErr5' at "UninitBitErr5.bsv", line 2,
  column 8.
